package no.atcampus.server.repo

import no.atcampus.server.entities.GroupEntity
import no.atcampus.server.entities.SchoolEntity
import org.springframework.data.jpa.repository.JpaRepository
import org.springframework.stereotype.Repository

@Repository
interface GroupRepo : JpaRepository<GroupEntity, Long>{
    fun findGroupEntitiesByName(name: String): MutableList<GroupEntity>
    fun findGroupEntitiesBySchoolEntity(schoolEntity: SchoolEntity): MutableList<GroupEntity>
}